<resources>
    <string name="link_facebook"><a href="https://www.facebook.com/MyVocabulary-418590168500849/">MyVocabulary</a></string>
    <string name="send_email"><![CDATA[ contact me at <a href=\"mailto:kebel.zsolt@gmail.com\">kebel.zsolt@gmail.com</a>]]></string>

    <string name="app_name">MyVocbulary</string>
    <string name="button_add">Add</string>
    <string name="message_deleted">Deleted</string>
    <string name="btn_done"><b>Done</b></string>

    <string name="btn_menu"><b>Menu</b></string>
    <string name="txt_word"><b>Phrase:</b></string>
    <string name="txt_meaning"><b>Meaning:</b></string>
    <string name="txt_addnew"><b>New</b></string>
    <string name="txt_search">Search</string>
    <string name="txt_delete">Delete</string>

    // Subjects
    <string name="English">English</string>
    <string name="French">French</string>
    <string name="German">German</string>
    <string name="Italian">Italian</string>
    <string name="Spanish">Spanish</string>
    <string name="Chinese">Chinese</string>
    <string name="Hungarian">Hungarian</string>

    <string name="Maths">Maths</string>
    <string name="IT">IT</string>
    <string name="Physics">Physics</string>
    <string name="Literature">Literature</string>
    <string name="Grammar">Grammar</string>
    <string name="Geography">Geography</string>
    <string name="Chemistry">Chemistry</string>
    <string name="Biology">Biology</string>

    // Dialog add phrase
    <string name="dialog_add_phrase_title">Adding a new phrase</string>
    <string name="dialog_add_phrase_positive_btn">Add</string>
    <string name="dialog_append_phrase_title">Append phrase\'s meaning?</string>

    // Activity tablayout
    <string name="title_vocabularies">Vocabularies</string>
    <string name="title_import">Import</string>
    <string name="title_subjects">Subjects</string>

    <string name="edit_title">Edit title</string>
    <string name="share">Share</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="learn">Learn</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_delete">Are you sure want to delete it?</string>
    <string name="edit">Edit</string>
    <string name="rename_text">Title:</string>
    <string name="btn_delete"><b>Delete</b></string>
    <string name="btn_safe_delete"><b>Export and Delete</b></string>
    <string name="btn_cancel">Cancel</string>
    <string name="rename_warning_text">Please note, that the title has to differ from the existing ones in that subject.</string>
    <string name="delete_warning_text">If you haven\'t exported it yet, you won\'t be able to take it back.</string>
    <string name="new_vocabulary">New vocabulary</string>
    <string name="import_from_txt">Import from .txt</string>

    <string name="added_msg">Vocabulary added</string>
    <string name="vocabulary_already_existing_msg">A vocabulary with the same title is already existing. If you still want to add it press add again.</string>

    <!-- Activity Main -->
    <string name="tab_home">Home</string>
    <string name="tab_vocabularies">Vocabularies</string>
    <string name="tab_add">Add</string>
    <string name="tab_settings">Settings</string>

    // vocabulary
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="Add">Add</string>
    <string name="Phrase">Phrase</string>
    <string name="Phrases">Phrases</string>
    <string name="meaning">Meaning</string>
    <string name="No">No</string>
    <string name="Yes"><b>Yes</b></string>
    <string name="msg_added">Phrase added</string>
    <string name="title">Title</string>
    <string name="msg_title_change_successful">Title changed</string>
    <string name="edited">Edited</string>
    <string name="undo">Undo</string>
    <string name="filter">Filter</string>
    <string name="just_a_moment">Just a moment…</string>
    <string name="state">State:</string>
    <string name="state_new">It\'s new.</string>
    <string name="state_dont_know">You need to practise…</string>
    <string name="state_kinda">You kind of memorized it.</string>
    <string name="state_know">You know this phrase quite well!</string>

    <string name="add_new">Add new</string>
    <string name="update_existing">Update existing</string>

    <!-- Vocabulary -->
    <string name="phrase">phrase</string>

    <!-- Activity Merge -->
    <string name="more">More</string>
    <string name="list_item_more">More …</string>
    <string name="rename">Rename</string>
    <string name="merge">Merge</string>
    <string name="merged_msg">Vocabularies merged</string>
    <string name="choose_other_vocabulary_msg">Choose other vocabulary</string>

    <string name="diagram_legend_state_new">New phrases</string>
    <string name="diagram_legend_state_1">Phrases you don\'t really know</string>
    <string name="diagram_legend_state_2">Phrases you kind of memorized</string>
    <string name="diagram_legend_state_3">Phrases you memorized well</string>


    // dialog sort picker
    <string name="date">Date</string>
    <string name="abc_phrase">Abc in phrase</string>
    <string name="abc_meaning">Abc in meaning</string>
    <string name="sort_title">Sort by</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort">Sort</string>
    <string name="newest_first">Newest first   </string>

    // settings
    <string name="title_user_setting">User Settings</string>
    <string name="title_settings">Settings</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="bug">Bug report</string>
    <string name="contact">Contact</string>

    // mActivity more

    // learn config
    <string name="title_learn_config">Learn Configuration</string>
    <string name="letsgo">Let\'s go</string>
    <string name="cheating">Cheating</string>
    <string name="asksfor">Asks for ...</string>
    <string name="time_to_answer">Time to answer</string>
    <string name="number_of_phrases">Number of phrases</string>
    <string name="all">All</string>
    <string name="custom">Custom</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="num_of_asked">Number of asked phrases:</string>
    <string name="exit">Exit</string>
    <string name="finish">Finish</string>
    <string name="type">Type</string>
    <string name="vocabulary_test">Vocabulary test</string>
    <string name="practise">Practise</string>

    // colored
    <string name="accent_learn"><b><font fgcolor="-#e62e00">Learn</font></b></string>
</resources>
