<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_user_setting"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold"
            android:textColor="@color/background"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edittext_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_gravity="center"/>

                    <RadioGroup
                        android:id="@+id/radio_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/radioButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/male" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/female" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/background"
            android:background="@drawable/btn_dark"
            android:onClick="back"/>
        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="@color/background"
            android:background="@drawable/btn_dark"
            android:onClick="save"/>
    </LinearLayout>
</LinearLayout>