<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/dark">

        <TextView
            android:text="@string/edit"
            android:textSize="25dp"
            android:textColor="@color/back_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>

    </RelativeLayout>



    <Button android:id="@+id/button"
        android:text="@string/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:onClick="doneEditing"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_dark"
        android:textColor="@color/colorAccent"
        android:layout_margin="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_above="@id/button">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:text="@string/Phrase"
                android:textSize="15dp"
                android:textColor="@color/text_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/textView4" />

            <com.xw.repo.XEditText
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_word"
                android:hint="type here"
                android:textSize="18dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:x_disableEmoji="true"/>

            <TextView
                android:text="@string/meaning"
                android:textSize="15dp"
                android:textColor="@color/text_grey"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <com.xw.repo.XEditText
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:id="@+id/editText_meaning"
                android:hint="type here"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:x_disableEmoji="true"/>

        </LinearLayout>
    </ScrollView>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="60dp">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:alpha="0.3"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/shadow2"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>

</RelativeLayout>