<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:text="@string/Phrase"
                android:textSize="15dp"
                android:textColor="@color/text_grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/textView4" />
            <com.xw.repo.XEditText
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_word"
                android:hint="type here"
                android:textSize="18dp"
                android:nextFocusForward="@id/editText_meaning"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:x_disableEmoji="true"/>


            <TextView
                android:text="@string/meaning"
                android:textSize="15dp"
                android:textColor="@color/text_grey"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <com.xw.repo.XEditText
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:id="@+id/editText_meaning"
                android:hint="type here"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:x_disableEmoji="true"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_add_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_dark"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        android:layout_margin="10dp"/>
</LinearLayout>