<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light">



    <android.support.constraint.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/page2"
        android:elevation="@dimen/header_elevation">

        <TextView
            android:text="@string/edit"
            android:textSize="@dimen/header_title_text_size"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_centerInParent="true"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/iv_click_back"
            android:layout_width="@dimen/btn_back_width"
            android:layout_height="@dimen/btn_back_height"
            android:padding="@dimen/btn_back_padding"
            android:src="@drawable/new_back"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"/>

    </android.support.constraint.ConstraintLayout>



    <Button android:id="@+id/button"
        android:text="@string/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:onClick="doneEditing"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_dark"
        android:textColor="@color/colorAccent"
        android:layout_margin="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_above="@id/button">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:text="@string/Phrase"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/textView4" />

            <EditText
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_word"
                android:hint="type here"
                android:textSize="18dp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <TextView
                android:text="@string/meaning"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <EditText
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:id="@+id/editText_meaning"
                android:hint="type here"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>