<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_rounded"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/text_grey"
            android:layout_gravity="center"/>

        <Switch
            android:id="@+id/sw_isTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Switch" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_test_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_rounded"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_phrases"
            android:textSize="15dp"
            android:textStyle="bold"
            android:textColor="@color/text_grey"
            android:layout_gravity="center"/>

        <Switch
            android:id="@+id/sw_numberOfPhrases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Switch" />

        <LinearLayout
            android:id="@+id/layoutCustomNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/num_of_asked"
                android:textColor="@color/colorAccent"
                android:gravity="right"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="50dp"
                android:gravity="center"
                android:inputType="number" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>