<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView android:id="@+id/tv_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Phrase"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="?android:selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"

        android:padding="5dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View android:id="@+id/v_line"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:background="@color/background_light"

        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@id/tv_phrase"
        app:layout_constraintBottom_toBottomOf="@id/tv_phrase"
        app:layout_constraintStart_toEndOf="@id/tv_phrase"/>

    <TextView android:id="@+id/tv_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meaning"
        android:textColor="@color/black"
        android:background="?android:selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"

        android:padding="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/v_line"/>



    <TextView android:id="@+id/tv_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_done"
        android:background="@drawable/ripple_btn_light_rounded"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:elevation="2dp"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@color/transplarent"
        android:gravity="top"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_done"/>


        <ImageView android:id="@+id/iv_google_translate"
            android:layout_width="45dp"
            android:layout_height="0dp"
            android:background="@drawable/ripple_btn_light_rounded"
            android:padding="8dp"
            android:src="@drawable/google_translate"
            android:elevation="2dp"
            android:clickable="true"
            android:focusable="true"

            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toStartOf="@id/tv_done"
            app:layout_constraintBottom_toBottomOf="@id/tv_done"
            app:layout_constraintTop_toTopOf="@id/tv_done"/>

</android.support.constraint.ConstraintLayout>